[package]
name = "casdtt"
version = "0.1.1"
authors = ["Soputtra San <soputtra.san@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
structopt = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
